--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "prettier": "prettier --ignore-path .gitignore --write \"**/*.+(js|json)\"",
     "format": "yarn prettier -- --write",
     "check-format": "yarn prettier -- --list-different",
-    "check-types": "tsc",
     "test": "jest",
-    "validate": "npm-run-all --parallel check-types check-format lint"
+    "validate": "npm-run-all --parallel check-types check-format lint",
+    "cm": "git-cz"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -22,6 +22,8 @@
     "@babel/cli": "^7.7.7",
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
     "@types/jest": "^24.0.24",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
