--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mockingjay",
+  "name": "express-awesome-boilerplate",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app/server.ts",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon",
@@ -28,6 +28,8 @@
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
+    "commitizen": "^4.0.3",
+    "cz-conventional-changelog": "^3.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
     "husky": "^3.1.0",
@@ -38,5 +40,10 @@
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "typescript": "^3.7.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
