--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prettier": "prettier --ignore-path .gitignore --write \"**/*.+(js|json)\"",
     "format": "yarn prettier -- --write",
     "check-format": "yarn prettier -- --list-different",
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
+    "test:ci": "yarn test --coverage --ci --colors --verbose",
     "validate": "npm-run-all --parallel check-types check-format lint",
     "cm": "git-cz"
   },
@@ -28,6 +29,7 @@
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
+    "codecov": "^3.6.1",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^6.8.0",
