--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
+    "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   },
   "config": {
